<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background">

    <ImageView
        android:id="@+id/signup_corner1"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:contentDescription="@string/splash_corners"
        android:rotation="90"
        android:src="@drawable/ic_welscreen_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signin_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signin_text"
            android:textAppearance="@style/general" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/TextInputLayoutStyle"
            android:layout_width="208dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:textColorHint="@color/text_color"
            app:endIconMode="clear_text"
            app:endIconTint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAppearance="@style/general"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/TextInputLayoutStyle"
            android:layout_width="208dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_color"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAppearance="@style/general"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:buttonTint="@color/border_choose"
                android:checked="false"
                android:text="@string/remember_me"
                android:textAppearance="@style/general"
                android:textColor="@color/text_color"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="79dp"
                android:layout_height="wrap_content"

                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/general"
                android:textColor="@color/border_choose"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="172dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/sin_button_form"
            android:backgroundTint="@color/border_choose"
            android:text="@string/signin_text"
            android:textAppearance="@style/general"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/signin_line1"
                android:layout_width="54dp"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_line"
                app:layout_constraintBottom_toBottomOf="@+id/or_with"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/or_with" />

            <TextView
                android:id="@+id/or_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/or_with"
                android:textAppearance="@style/general"
                android:textColor="#CCFFFDFE"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/signin_line2"
                app:layout_constraintStart_toEndOf="@+id/signin_line1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/signin_line2"
                android:layout_width="54dp"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_line"
                app:layout_constraintBottom_toBottomOf="@+id/or_with"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/or_with" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook_button"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/sin_button_form"
            android:backgroundTint="@color/facebook_blue"
            android:text="Sign In with Facebook"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_button"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/sin_button_form"
            android:backgroundTint="@color/white"
            android:text="Sign In with Google"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:onClick="onSignUpClick"
            android:text="@string/activity_link_signup"
            android:textAppearance="@style/general"
            android:textColor="@color/border_choose"
            android:textSize="11sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/signup_corner2"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:contentDescription="@string/splash_corners"
        android:rotation="-90"
        android:src="@drawable/ic_welscreen_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>